--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/chigozieorunta/sql-to-cpt/issues"
   },
-  "homepage": "https://github.com/chigozieorunta/sql-to-cpt#readme"
+  "homepage": "https://github.com/chigozieorunta/sql-to-cpt#readme",
+  "devDependencies": {
+    "browsersync": "^0.0.1-security",
+    "gulp": "^4.0.2",
+    "gulp-sass": "^5.0.0"
+  }
 }
