--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "browsersync": "^0.0.1-security",
     "gulp": "^4.0.2",
     "gulp-sass": "^5.0.0"
+  },
+  "dependencies": {
+    "npm-run-all": "^4.1.5"
   }
 }
