--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "devDependencies": {
     "browsersync": "^0.0.1-security",
     "gulp": "^4.0.2",
-    "gulp-sass": "^5.0.0"
+    "gulp-sass": "^5.0.0",
+    "sass": "^1.43.4"
   },
   "dependencies": {
     "npm-run-all": "^4.1.5"
