--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,12 @@
     "minimum-stability": "dev",
     "require": {
         "composer/installers": "2.x-dev"
+    },
+    "src": {
+        "autoload": {
+            "psr-4": {
+                "SqlToCpt\\": "src/"
+            }
+        }
     }
 }
