Added WP shuttle package for generating WP site via Vagrant provisioning

--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,8 @@
                 "SqlToCpt\\": "src/"
             }
         }
+    },
+    "require-dev": {
+        "wpsh/local": "dev-master"
     }
 }
