--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "browsersync": "^0.0.1-security",
     "gulp": "^4.0.2",
     "gulp-sass": "^5.0.0",
-    "sass": "^1.43.4"
+    "sass": "^1.43.4",
+    "gulp-composer": "^0.4.5"
   },
   "dependencies": {
     "npm-run-all": "^4.1.5"
