--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     },
     "require-dev": {
         "wpsh/local": "dev-master",
-        "phpunit/phpunit": "8.5.x-dev"
+        "phpunit/phpunit": "8.5.x-dev",
+        "mockery/mockery": "1.3.x-dev"
     }
 }
