--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
   },
   "homepage": "https://github.com/chigozieorunta/sql-to-cpt#readme",
   "devDependencies": {
-    "browsersync": "^0.0.1-security",
     "gulp": "^4.0.2",
+    "gulp-clean-css": "^4.3.0",
     "gulp-composer": "^0.4.5",
     "gulp-sass": "^5.0.0",
     "npm-run-all": "^4.1.5",
-    "sass": "^1.43.4"
+    "sass": "^1.43.4",
+    "browser-sync": "^2.27.7"
   },
   "dependencies": {
     "bootstrap": "^5.1.3"
