--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,8 @@
     "require-dev": {
         "wpsh/local": "dev-master",
         "phpunit/phpunit": "8.5.x-dev",
-        "mockery/mockery": "1.3.x-dev"
+        "mockery/mockery": "1.3.x-dev",
+        "10up/wp_mock": "dev-trunk",
+        "wp-coding-standards/wpcs": "dev-develop"
     }
 }
