Added new scripts

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "gulp watch",
-    "build": "gulp build"
+    "build": "gulp build",
+    "compile": "npm-run-all --parallel compile:*",
+    "compile:css": "gulp sass"
   },
   "repository": {
     "type": "git",
