--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
   },
   "homepage": "https://github.com/chigozieorunta/sql-to-cpt#readme",
   "devDependencies": {
+    "browser-sync": "^2.27.7",
     "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^8.0.0",
     "gulp-clean-css": "^4.3.0",
     "gulp-composer": "^0.4.5",
     "gulp-sass": "^5.0.0",
     "npm-run-all": "^4.1.5",
-    "sass": "^1.43.4",
-    "browser-sync": "^2.27.7"
+    "sass": "^1.43.4"
   },
   "dependencies": {
     "bootstrap": "^5.1.3"
