Reinstalled dev dependencies

--- a/composer.json
+++ b/composer.json
@@ -1,30 +1,27 @@
 {
-    "name": "chigozieorunta/sql-to-cpt",
-    "description": "A simple WP plugin to help you convert an SQL file with table columns to CPT meta fields.",
-    "type": "wordpress-plugin",
-    "license": "GPL",
-    "authors": [
-        {
-            "name": "Chigozie Orunta",
-            "email": "chigozieorunta@yahoo.com"
-        }
-    ],
-    "minimum-stability": "dev",
-    "require": {
-        "composer/installers": "2.x-dev"
-    },
-    "src": {
-        "autoload": {
-            "psr-4": {
-                "SqlToCpt\\": "src/"
-            }
-        }
-    },
-    "require-dev": {
-        "wpsh/local": "dev-master",
-        "phpunit/phpunit": "8.5.x-dev",
-        "mockery/mockery": "1.3.x-dev",
-        "10up/wp_mock": "dev-trunk",
-        "wp-coding-standards/wpcs": "dev-develop"
+  "name": "chigozieorunta/sql-to-cpt",
+  "description": "A simple WP plugin to help you convert an SQL file with table columns to CPT meta fields.",
+  "type": "wordpress-plugin",
+  "license": "GPL",
+  "authors": [
+    {
+      "name": "Chigozie Orunta",
+      "email": "chigozieorunta@yahoo.com"
     }
+  ],
+  "require": {
+    "composer/installers": "^2.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "SqlToCpt\\": "src/"
+    }
+  },
+  "require-dev": {
+    "wpsh/local": "^0.2.3",
+    "10up/wp_mock": "^0.4.2",
+    "phpunit/phpunit": "^8.5",
+    "mockery/mockery": "^1.3",
+    "wp-coding-standards/wpcs": "^2.3"
+  }
 }
