--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "browser-sync": "^2.27.7",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
+    "gulp-babel": "^8.0.0",
     "gulp-clean-css": "^4.3.0",
     "gulp-composer": "^0.4.5",
+    "gulp-concat": "^2.6.1",
     "gulp-sass": "^5.0.0",
+    "gulp-uglify": "^3.0.2",
     "npm-run-all": "^4.1.5",
     "sass": "^1.43.4"
   },
