--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-sass": "^5.0.0",
     "gulp-uglify": "^3.0.2",
+    "merge-stream": "^2.0.0",
     "npm-run-all": "^4.1.5",
     "sass": "^1.43.4"
   },
