--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3'
 
 services:
+
   mysql:
     image: mysql:5
     restart: always
@@ -13,3 +14,7 @@ services:
       MYSQL_ROOT_PASSWORD: password
 
   wordpress:
+    restart: always
+    volumes:
+      - wp_data:/var/www/html/wp-content
+      - .:/var/www/html/wp-content/plugins/sql-to-cpt
