--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "compile:css": "gulp sass",
     "compile:js": "gulp scripts",
     "lint": "npm-run-all --parallel lint:*",
-    "lint:php": "composer lint"
+    "lint:php": "composer lint",
+    "lint:js": "eslint"
   },
   "repository": {
     "type": "git",
@@ -17,7 +18,7 @@
   },
   "keywords": [],
   "author": "Chigozie Orunta",
-  "license": "ISC",
+  "license": "GPL",
   "bugs": {
     "url": "https://github.com/chigozieorunta/sql-to-cpt/issues"
   },
