--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,14 +6,23 @@ services:
     image: mysql
     platform: linux/amd64
     restart: always
-    ports:
-      - 0007:3306
     volumes:
       - db_data:/var/lib/mysql
     environment:
       MYSQL_DATABASE: sqltocpt
-      MYSQL_USER: sqltocpt
-      MYSQL_PASSWORD: password
+      MYSQL_ROOT_PASSWORD: password
+    networks:
+      - sqltocpt
+
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    restart: always
+    depends_on:
+      - mysql
+    ports:
+      - '1234:80'
+    environment:
+      PMA_HOST: mysql
       MYSQL_ROOT_PASSWORD: password
     networks:
       - sqltocpt
@@ -24,14 +33,14 @@ services:
     depends_on:
       - mysql
     ports:
-      - '0047:80'
+      - '5678:80'
     volumes:
       - wp_data:/var/www/html/wp-content
       - .:/var/www/html/wp-content/plugins/sql-to-cpt
     environment:
       WORDPRESS_DEBUG: 1
       WORDPRESS_DB_HOST: mysql:3306
-      WORDPRESS_DB_USER: sqltocpt
+      WORDPRESS_DB_USER: root
       WORDPRESS_DB_PASSWORD: password
     networks:
       - sqltocpt
