--- a/composer.json
+++ b/composer.json
@@ -23,5 +23,10 @@
     "phpunit/phpunit": "^8.5",
     "mockery/mockery": "^1.3",
     "wp-coding-standards/wpcs": "^2.3"
+  },
+  "config": {
+    "allow-plugins": {
+      "composer/installers": true
+    }
   }
 }
