--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     volumes:
       - db_data:/var/lib/mysql
     environment:
-      MYSQL_DATABASE: sqltocpt
+      MYSQL_DATABASE: wordpress
       MYSQL_ROOT_PASSWORD: password
     networks:
       - sqltocpt
